Style tweaks (line-height issue on list pane and spacing issue on modals

--- a/src/Boards/wwwroot/css/sass/global/_modals.scss
+++ b/src/Boards/wwwroot/css/sass/global/_modals.scss
@@ -14,7 +14,7 @@
 .modal-content {
     align-self: center;
     background-color: $color-abbey;
-    padding: 26px 21px 50px 21px;
+    padding: 40px 21px 50px 21px;
     position: relative;
     width: 512px;
 
