--- a/src/Boards/wwwroot/css/sass/partials/_list-pane.scss
+++ b/src/Boards/wwwroot/css/sass/partials/_list-pane.scss
@@ -33,7 +33,7 @@
         }
 
         &.category:before {
-            @include position(absolute, 15px null null 0px);
+            @include position(absolute, 6px null null 0px);
             @include size(10px 24px);
             content: "";
             display: block;
@@ -47,6 +47,15 @@
         &.category.category-6:before { background-color: $color-category-6; }
         &.category.category-7:before { background-color: $color-category-7; }
         &.category.category-8:before { background-color: $color-category-8; }
+    }
+
+    ul > li {
+        line-height: 1.2;
+        margin: 0 0 16px;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 
     a {
